--- a/gemsvg.html
+++ b/gemsvg.html
@@ -3,10 +3,10 @@
     <script>
       window.setTimeout(() => {
         window.location = window.location;
-      }, 5000);
+      }, 500);
     </script>
   </head>
   <body>
-    <img src="ruby.svg" height="500" width="500" />
+    <img src="gem_avax.svg" height="500" width="500" />
   </body>
 </html>
